<?xml version="1.0"?>
<package format="3">
  <name>ati_wireless_ft</name>
  <version>0.1.0</version>
  <description>The ati_wireless_ft package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- <url type="website">http://wiki.ros.org/tams_wireless_ft</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="hendrich@informatik.uni-hamburg.de">Norman Hendrich</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <!-- <build_depend>xacro</build_depend> -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2_bullet</build_depend> -->
  <build_depend>eigen</build_depend>

  <!-- <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversion</run_depend>
  <run_depend>tf2_bullet</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>eigen</run_depend> -->
  <build_export_depend>eigen</build_export_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
